# georesearcher

./: .env.example  .gitignore  README.md  codebuddy.md  config.m3.yaml  config.m4.yaml  config.yaml  pyproject.toml
docs/: design--20260704--v1.md  plan--20260704--v1.md  plan-m2--20260705--v1.md  plan-m3--20260705--v1.md  plan-m4--20260705--v1.md
examples/: m0_smoke.py
scripts/: batch_ingest.py  gen_eval_set.py  scan_papers.py  tag_papers.py
src/georesearcher/: __init__.py  config.py  types.py
src/georesearcher/capabilities/: __init__.py
src/georesearcher/capabilities/evaluation/: __init__.py  dataset.py  evaluator.py  generation_metrics.py  report.py  retrieval_metrics.py  schemas.py
src/georesearcher/capabilities/gis/: __init__.py
src/georesearcher/capabilities/ideation/: __init__.py
src/georesearcher/capabilities/ingest/: __init__.py  chunker.py  parser.py  pipeline.py
src/georesearcher/models/: __init__.py  embedding.py  llm.py
src/georesearcher/orchestration/: __init__.py  graph.py  nodes.py  router.py  state.py
src/georesearcher/storage/: __init__.py  sqlite_store.py  vector_store.py
src/georesearcher/ui/: __init__.py  cli.py
tests/: test_chunker.py  test_config.py  test_eval_dataset.py  test_eval_schemas.py  test_evaluator.py  test_gen_eval_set.py  test_generation_metrics.py  test_generator.py  test_ingest_pipeline.py  test_interpret.py  test_openalex.py  test_orchestration.py  test_parser.py  test_report.py  test_retrieval_metrics.py  test_retrieve_raw.py  test_retriever.py  test_search_pipeline.py  test_search_stubs.py  test_sqlite_store.py  test_types.py  test_vector_store.py
tests/eval_set/: README.md  eval_set.json
tests/fixtures/: openalex_works.json
(+12 files in other folders)
