[project]
name = "georesearcher"
version = "0.0.1"
description = "GeoResearcher — a research copilot for GIS / spatiotemporal / smart-city research (orchestrated multi-agent, evaluable RAG, GIS tooling, top-journal plotting)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "wwwyyyqqq" }]
license = { text = "MIT" }

# NOTE (executor): versions here are floors. After `uv sync`, run `uv pip freeze`
# and pin exact versions if reproducibility issues appear. Do NOT invent versions.
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "openai>=1.30",            # DeepSeek via OpenAI-compatible endpoint
    "chromadb>=0.5",           # default vector store
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy / stage-specific deps are opt-in so M0 stays lightweight and clone-runnable.
rag = [
    "llama-index-core>=0.11",
    "sentence-transformers>=3.0",  # bge-m3 / bge-small + cross-encoder reranker
    "pymupdf>=1.24",               # import name: fitz
    "rank-bm25>=0.2.2",            # BM25 sparse retrieval
]
eval = ["ragas>=0.2"]
ui = ["streamlit>=1.37"]
gis = ["mcp>=1.0"]             # MCP client for gis-mcp / qgis_mcp (used from M4)
orchestration = ["langgraph>=0.2", "langgraph-checkpoint-sqlite>=1.0"]  # M4
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
georesearcher = "georesearcher.ui.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/georesearcher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
